Added class for logo

--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <head>
     <title>
-        google.com
+        Google
     </title>
     <link href="./style.css" type="text/css" rel="stylesheet">
     
 </head>
 <body>
-    <div id=logo>
-       <p>
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
-    </p> 
+    <div class="google-logo">
+       <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo"> 
     </div>
-    <div id=searchbar>
-
-    </div>
+    
 
 </body>
