Added navigation bar and 4 buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <div class="google-logo">
        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo"> 
     </div>
-    
+    <div class="wrap">
+        <input type="text" class="searchTerm"> 
+        <button type="submit" class="searchbutton">
+        <i class="fa fa-search"></i>
+        </button>
+        </div>
+    <div id="navigation">
+        <a href="default.asp">About</a>
+        <a href="store.asp">Store</a>
+    </div>
+    <div class="rb">
+        <a href="gmail.asp">Gmail</a>
+        <a href="images.asp">Images</a>
+    </div>
+        
 
 </body>
